--- a/src/main/java/edu/tsinghua/software/pages/template/BasePage.html
+++ b/src/main/java/edu/tsinghua/software/pages/template/BasePage.html
@@ -11,7 +11,7 @@
 	href="css/login.css" />
 <link rel="stylesheet" href="css/jquery.jgrowl.css" />
 <!-- <link href="./css/bootstrap.css" media="screen" type="text/css" rel="stylesheet"> -->
-<script src="js/jquery-1.7.1.min.js"></script>
+<script src="js/jquery-1.8.3.js"></script>
 <script src="js/jquery-ui-1.8.19.custom.min.js"></script>
 <script src="js/bootstrap.min.js"></script>
 <script src="js/jquery.jgrowl.js"></script>
